--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Somebers</title>
+  <title>Somebers – Free Number Puzzle Game</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Somebers is a fast, free, offline-friendly number puzzle game. Sharpen your logic with quick math challenges you can play instantly on desktop or mobile.">
+  <meta name="keywords" content="number puzzle, math game, logic puzzle, brain training, offline game, web game, free puzzle game">
+  <meta name="author" content="Somebers">
+  <link rel="canonical" href="https://www.somebers.com/">
+  <meta name="theme-color" content="#121212">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Somebers - Free Number Puzzle Game">
+  <meta property="og:description" content="Quick, clever number puzzles you can play in your browser. No login. Works offline.">
+  <meta property="og:url" content="https://www.somebers.com/">
+  <meta property="og:site_name" content="Somebers">
+  <meta property="og:image" content="https://www.somebers.com/icons/icon-512x512.png">
+  <meta property="og:image:alt" content="Somebers number puzzle game logo">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Somebers - Free Number Puzzle Game">
+  <meta name="twitter:description" content="Quick, clever number puzzles you can play in your browser. No login. Works offline.">
+  <meta name="twitter:image" content="https://www.somebers.com/icons/icon-512x512.png">
   <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="icons/icon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="icons/icon-32x32.png">
@@ -13,6 +34,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Somebers",
+    "applicationCategory": "Game",
+    "operatingSystem": "Web",
+    "url": "https://www.somebers.com/",
+    "image": "https://www.somebers.com/icons/icon-512x512.png",
+    "inLanguage": "en",
+    "description": "Somebers is a fast, free, offline-friendly number puzzle game for web and mobile browsers.",
+    "genre": ["Puzzle", "Logic", "Math"],
+    "offers": { "@type": "Offer", "price": 0, "priceCurrency": "USD" },
+    "publisher": { "@type": "Organization", "name": "Somebers" },
+    "potentialAction": {
+      "@type": "PlayAction",
+      "target": { "@type": "EntryPoint", "urlTemplate": "https://www.somebers.com/" }
+    }
+  }
+  </script>
 </head>
 <body>
   <app-root></app-root>
